removed hiccup support, bux fixes, updated site template

--- a/src/leiningen/new/luminus/cljs/tetris.html
+++ b/src/leiningen/new/luminus/cljs/tetris.html
@@ -17,6 +17,6 @@
       </div>
 
     </section>
-    <button onclick="{{name}}.game.startGame()">start game</button>
+    <button onclick="{{sanitized}}.game.startGame()">start game</button>
   </body>
 </html>
