renamed context to servlet-context to be inline with Selmer, updated to latest Selmer

--- a/src/leiningen/new/luminus/cljs/cljsexample.html
+++ b/src/leiningen/new/luminus/cljs/cljsexample.html
@@ -11,7 +11,7 @@
 <button id="send">add message</button>
 
 <!--  scripts -->
-<script type="text/javascript" src="js/site.js"></script>
+<script type="text/javascript" src="#%servlet-context%#/js/site.js"></script>
 <script type="text/javascript">
 	{{sanitized}}.main.init();
 </script>
