--- a/src/leiningen/new/luminus/dbs/mongo_instructions.html
+++ b/src/leiningen/new/luminus/dbs/mongo_instructions.html
@@ -3,7 +3,7 @@
  <p>Before continuing please follow the steps below to configure your MongoDB connection.</p>
  <ol>
    <li> Ensure that MongoDB is up and running.
-   <li> Add the connection parameters in the <code>{{name}}.models.db</code> namespace.
+   <li> Add the connection parameters in the <code>{{name}}.db.core</code> namespace.
    <li> Restart the application.
  </ol>
 </div>
