--- a/src/leiningen/new/luminus/cljs/home.html
+++ b/src/leiningen/new/luminus/cljs/home.html
@@ -13,7 +13,8 @@
     </div>
     <div class="span8">
         <div id="app">
-            <p>Please run <code>lein cljsbuild auto dev</code> to start the ClojureScript compiler.</p>
+            <p>If you're seeing this message, that means you haven't yet compiled your ClojureScript!</p>
+            <p>Please run <code>lein cljsbuild auto dev</code> to start the ClojureScript compiler and reload the page.</p>
             <p>See <a href="http://www.luminusweb.net/docs/clojurescript.md">ClojureScript</a> documentation for further details.</p>
         </div>
     </div>
