improved cljs template

--- a/src/leiningen/new/luminus/cljs/app.html
+++ b/src/leiningen/new/luminus/cljs/app.html
@@ -37,9 +37,9 @@
     </script>
     {% if dev %}
       <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.11.2/react.js"></script>
-      {% script "/js/goog/base.js" %}
+      {% script "/js/out/goog/base.js" %}
       {% script "/js/app.js" %}
-      <script type="text/javascript">goog.require("{{sanitized}}.core");</script>
+      <script type="text/javascript">goog.require("{{sanitized}}.app");</script>
     {% else %}
       <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.11.2/react.min.js"></script>
       {% script "/js/app.js" %}
