refactoring to remove lib-noir

--- a/src/leiningen/new/luminus/cljs/app.html
+++ b/src/leiningen/new/luminus/cljs/app.html
@@ -14,7 +14,7 @@
       </div>
       <div class="row-fluid">
 
-        <div class="span9" id="docs">#%docs|safe%#</div>
+        <div class="span9" id="docs">#%docs|markdown%#</div>
       </div>
       <div class="row-fluid">
         <div class="span9" id="app">
