--- a/resources/leiningen/new/luminus/cljs/resources/html/home.html
+++ b/resources/leiningen/new/luminus/cljs/resources/html/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+      <meta charset="UTF-8"/>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Welcome to <<name>></title>
   </head>
