--- a/resources/leiningen/new/luminus/core/resources/html/home.html
+++ b/resources/leiningen/new/luminus/core/resources/html/home.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="row">
-  <div class="col-sm-12">
-    {{docs|markdown}}
+  <div class="content">
+  {{docs|markdown}}
   </div>
-</div>
 {% endblock %}
