switched to use Material Icons instead of Font Awesome

--- a/resources/leiningen/new/luminus/cljs/resources/html/home.html
+++ b/resources/leiningen/new/luminus/cljs/resources/html/home.html
@@ -31,10 +31,8 @@
 
     <!-- scripts and styles -->
     {% style "/assets/bulma/css/bulma.min.css" %}
-    {% style "/assets/font-awesome/css/all.css" %}
+    {% style "/assets/material-icons/css/material-icons.min.css" %}
     {% style "/css/screen.css" %}
-
-    {% script "/assets/font-awesome/js/all.js" %}
 
     <script type="text/javascript"><% if servlet %>
         var context = "{{servlet-context}}";<% endif %>
