--- a/resources/leiningen/new/luminus/core/resources/html/base.html
+++ b/resources/leiningen/new/luminus/core/resources/html/base.html
@@ -6,49 +6,51 @@
     <title>Welcome to <<name>></title>
 
     <!-- styles -->
-    {% style "/assets/bootstrap/css/bootstrap.min.css" %}
-    {% style "/assets/font-awesome/css/all.css" %}
+    {% style "/assets/bulma/css/bulma.min.css" %}
+      {% style "/assets/material-icons/css/material-icons.min.css" %}
 
     {% style "/css/screen.css" %}
   </head>
   <body>
       <!-- navbar -->
-      <nav class="navbar navbar-dark bg-primary navbar-expand-md" role="navigation">
-          <button class="navbar-toggler hidden-sm-up"
-                  type="button"
-                  data-toggle="collapse"
-                  data-target="#collapsing-navbar">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <a class="navbar-brand" href="<% if servlet %>{{servlet-context}}<% endif %>/"><<name>></a>
-          <div class="collapse navbar-collapse" id="collapsing-navbar">
-              <ul class="nav navbar-nav">
-                  <li class="nav-item">
-                      <a href="<% if servlet %>{{servlet-context}}<% endif %>/"
-                         class="nav-link{% ifequal page "home.html" %} active{%endifequal%}">
-                      home
-                      </a>
-                  </li>
-                  <li class="nav-item">
-                      <a href="<% if servlet %>{{servlet-context}}<% endif %>/about"
-                         class="nav-link{% ifequal page "about.html" %} active{%endifequal%}">
-                      about
-                      </a>
-                  </li>
-              </ul>
+      <nav class="navbar is-info">
+          <div class="container">
+              <div class="navbar-brand">
+                  <a class="navbar-item" href="/" style="font-weight:bold;"><<name>></a>
+                  <span class="navbar-burger burger" data-target="nav-menu">
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                  </span>
+              </div>
+              <div id="nav-menu" class="navbar-menu">
+                  <div class="navbar-end">
+                      <a href="/" class="navbar-item{% ifequal page "home.html" %} is-active{%endifequal%}">Home</a>
+                      <a href="/about" class="navbar-item{% ifequal page "about.html" %} is-active{%endifequal%}">About</a>
+                  </div>
+              </div>
           </div>
       </nav>
 
-    <div class="container">
-      {% block content %}
-      {% endblock %}
-    </div>
+      <section class="section">
+          <div class="container">
+              {% block content %}
+              {% endblock %}
+          </div>
+      </section>
 
     <!-- scripts -->
-    {% script "/assets/jquery/jquery.min.js" %}
-    {% script "/assets/font-awesome/js/all.js" %}
-    {% script "/assets/tether/dist/js/tether.min.js" %}
-    {% script "/assets/bootstrap/js/bootstrap.min.js" %}
+    <script type="text/javascript">
+      (function() {
+        var burger = document.querySelector('.burger');
+        var nav = document.querySelector('#'+burger.dataset.target);
+        burger.addEventListener('click', function(){
+          burger.classList.toggle('is-active');
+          nav.classList.toggle('is-active');
+        });
+      })();
+    </script>
+
     <% if servlet %><script type="text/javascript">
       var context = "{{servlet-context}}";
     </script><% endif %>
