switched to use navbar-start for nav links

--- a/resources/leiningen/new/luminus/core/resources/html/base.html
+++ b/resources/leiningen/new/luminus/core/resources/html/base.html
@@ -24,7 +24,7 @@
                   </span>
               </div>
               <div id="nav-menu" class="navbar-menu">
-                  <div class="navbar-end">
+                  <div class="navbar-start">
                       <a href="/" class="navbar-item{% ifequal page "home.html" %} is-active{%endifequal%}">Home</a>
                       <a href="/about" class="navbar-item{% ifequal page "about.html" %} is-active{%endifequal%}">About</a>
                   </div>
