--- a/resources/leiningen/new/luminus/expanded/resources/html/error.html
+++ b/resources/leiningen/new/luminus/expanded/resources/html/error.html
@@ -4,7 +4,7 @@
     <title>Something Bad Happened</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% style "/assets/bulma/css/bulma.min.css" %}
+    {% style "<% if war %>"/<<name>>"<% else %>""<% endif %>/assets/bulma/css/bulma.min.css" %}
     <style type="text/css">
         html {
             height: 100%;
